@@ -30,6 +30,8 @@
 # Nautilus-Actions Reference Manual
 #
 
+if ENABLE_GTK_DOC
+
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
 include $(top_srcdir)/gtk-doc.make
 
@@ -53,8 +55,7 @@ core_headers = $(patsubst $(top_srcdir)/src/core/%,%,$(shell \ls -1 $(top_srcdir
 # files are actually generated (version_dir.xml)
 # as a consequence, auto created files are automatically included in the
 # tarball
-content_files = $(shell \ls -1 *.xml)
-content_files += $(auto_created_files)
+content_files = $(shell \ls -1 *.xml) $(auto_created_files)
 
 if !HAVE_GCONF
 ignore_headers = na-gconf-monitor.h
@@ -73,19 +74,12 @@ SCAN_OPTIONS = \
 	$(NULL)
 
 # The directory containing the source code. Relative to $(srcdir)
-# Starting with gtk-doc 1.15, multiple source dirs are directly handled
-# by gtk-doc.make
-if HAVE_GTK_DOC_115
+# Starting with gtk-doc 1.15 (which is required by configure.ac),
+# multiple source dirs are directly handled by gtk-doc.make
 DOC_SOURCE_DIR = \
 	$(top_srcdir)/src/api 						\
 	$(top_srcdir)/src/core						\
 	$(NULL)
-else
-DOC_SOURCE_DIR = \
-	$(top_srcdir)/src/api 						\
-	--source-dir=$(top_srcdir)/src/core			\
-	$(NULL)
-endif
 
 # Headers to ignore
 IGNORE_HFILES = \
@@ -95,14 +89,14 @@ IGNORE_HFILES = \
 
 # CFLAGS and LDFLAGS for compiling scan program.
 # Only needed if $(DOC_MODULE).types is non-empty.
-AM_CPPFLAGS = \
+AM_CPPFLAGS += \
 	-I $(top_srcdir)/src						\
 	$(NAUTILUS_ACTIONS_CFLAGS)					\
 	$(NULL)
 
 core_libdir = $(top_builddir)/src/core/.libs
 
-AM_LDFLAGS = \
+AM_LDFLAGS += \
 	$(NAUTILUS_ACTIONS_LIBS)					\
 	$(core_libdir)/libna-core.so				\
 	$(NULL)
@@ -132,7 +126,7 @@ MKTMPL_OPTIONS = \
 	$(NULL)
 
 # Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
-# nb: unable to subst/strip/sed a last $(null) terminating character!
+# nb: unable to subst/strip/sed a $(null) terminating character!
 #     so keep it out of there
 auto_created_files = \
 	$(xml_files)								\
@@ -158,6 +152,7 @@ xml_in_files = \
 xml_files = $(xml_in_files:.xml.in=.xml)
 
 version_dir.xml: version.xml
+	rm -f version_dir.xml
 	cat version.xml | $(SED) 's?^\([[:alnum:]]\.[[:alnum:]]\).*?\1?' > version_dir.xml
 
 CLEANFILES += \
@@ -168,10 +163,5 @@ CLEANFILES += \
 install-data-local: install-data-local-hook
 
 install-data-local-hook:
-	echo "core_headers=$(core_headers)"
-	echo "content_files=$(content_files)"
 
-#echo "written_xmls_regexp=$(written_xmls_regexp)"
-#echo "written_xmls=$(written_xmls)"
-
-#TESTS = $(GTKDOC_CHECK)
+endif
